Fix dark mode category header icon color on hover

--- a/src/styles/bundle.css
+++ b/src/styles/bundle.css
@@ -647,7 +647,7 @@ figure {
 	.collection header img.rss {
 		filter: invert(70%) sepia(51%) saturate(3885%) hue-rotate(358deg) brightness(99%) contrast(109%);
 
-		&:hover {
+		a:hover & {
 			filter: invert(47%) sepia(77%) saturate(473%) hue-rotate(155deg) brightness(100%) contrast(90%);
 		}
 	}
